@@ -10,6 +10,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -25,11 +26,16 @@ public class SecurityConfig {
                         session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
                 )
                 .authorizeHttpRequests(auth -> auth
+                        // Swagger 문서 경로
                         .requestMatchers(
                                 "/docs/**",
                                 "/swagger-ui/**",
-                                "/v3/api-docs/**"
+                                "/v3/api-docs/**",
+                                "/swagger-resources/**"
                         ).permitAll()
+                        // Auth API 경로 (모두 허용)
+                        .requestMatchers("/api/auth/**").permitAll()
+                        // 그 외 모든 요청 허용 (추후 인증 필요한 경로는 여기서 제외)
                         .anyRequest().permitAll()
                 )
                 .formLogin(form -> form.disable())
@@ -41,13 +47,33 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
+        
+        // 허용할 Origin 패턴 (모든 도메인 허용)
         configuration.setAllowedOriginPatterns(List.of("*"));
-        configuration.setAllowedMethods(List.of("GET", "POST", "PATCH", "DELETE"));
+        
+        // 허용할 HTTP 메서드
+        configuration.setAllowedMethods(Arrays.asList(
+                "GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"
+        ));
+        
+        // 허용할 헤더
         configuration.setAllowedHeaders(List.of("*"));
+        
+        // 인증 정보 포함 허용 (쿠키, Authorization 헤더 등)
         configuration.setAllowCredentials(true);
+        
+        // Preflight 요청 결과 캐시 시간 (초)
         configuration.setMaxAge(3600L);
+        
+        // 노출할 응답 헤더
+        configuration.setExposedHeaders(Arrays.asList(
+                "Authorization",
+                "Content-Type",
+                "X-Total-Count"
+        ));
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        // 모든 경로에 CORS 설정 적용
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
